--- a/blogv2/public/0925629cbc/index.html
+++ b/blogv2/public/0925629cbc/index.html
@@ -42,7 +42,7 @@
         <div class="article-head-container">
             <div id="moving-stripes">
             </div>
-            <div class="article-information-container">
+            <div class="article-information-container information-bar-head">
                 <div class="article-number">
                     Beitrag 1
                 </div>
@@ -53,11 +53,36 @@
                     335 Wörter
                 </div>
             </div>
+            <div class="article-image-wrapper">
+                <img class="articleImage" src="/images/0925629CBC.webp" loading="lazy" alt="">
+            </div>
+            <div class="article-banner-container article-banner-head">
+                <div class="article-title-wrapper">
+                    <h2 class="article-title">Propagandamaschine der Republik</h2>
+                </div>
+                <div class="article-subtitle-wrapper">
+                    <h3 class="article-subtitle">Eine kurze Geschichte über die Öffentlich Rechtlichen Medien</h3>
+                </div>
+            </div>
         </div>
+        <div class="article-content"><p>Im Schatten der Nachkriegstrümmer erblickte ein Medienimperium das Licht der Welt, das bis heute tief in den Taschen der Bürger wühlt: die öffentlich-rechtlichen Rundfunkanstalten. Unter dem <strong>Deckmantel der &ldquo;Umerziehung&rdquo;</strong> von den Alliierten ins Leben gerufen, mauserten sich <em>ARD</em>, <em>ZDF</em> und Co. zu einem Medienkoloss, dessen selbst die kühnsten Träume der Nachkriegsplaner in den Schatten stellt. Pracht</p>
+<p>1950 schlug die Stunde Null für die <em>ARD</em>. Offiziell als <strong>Bollwerk der Demokratie</strong> gepriesen, entpuppte sie sich als subtiles Instrument zur Lenkung der öffentlichen Meinung. Wie einst die <em>CIA</em> ihre Tentakel in die US-Presse ausstreckte, so durchdringen heute politische Interessen die Nervenzentren der Öffentlich-Rechtlichen.</p>
+<p>Der euphemistisch als <strong>&ldquo;Demokratieabgabe&rdquo;</strong> getarnte Rundfunkbeitrag entpuppt sich bei näherer Betrachtung als verkappte Zwangssteuer für staatlich sanktionierte Information. Jeder Haushalt wird zur Kasse gebeten, ob er will oder nicht. Die Dimensionen sind atemberaubend: Über <strong>8 Milliarden Euro</strong> jährlich verschlingt der Moloch. Ein System, das Fragen nach Effizienz und Verhältnismäßigkeit aufwirft.</p>
+<p>Doch wohin versickern die Milliarden? In die Taschen aufgeblähter Verwaltungsapparate, in fürstliche Gehälter für Intendanten und in den Erwerb überteuerten Bildmaterials. Die vielbesungene Unabhängigkeit entpuppt sich als Fata Morgana. In den Aufsichtsgremien tummeln sich Politiker, die dafür sorgen, dass unbequeme Stimmen im Keim erstickt werden.</p>
+<p>Die öffentlich-rechtlichen Medien haben sich zu einem Staat im Staate aufgeschwungen, der seine eigene Agenda verfolgt. Statt Vielfalt herrscht Konformität, statt Aufklärung subtile <strong>Meinungsmache</strong>. Die Berichterstattung gleicht mitunter einer Echokammer des politischen Establishments, in der abweichende Meinungen bestenfalls als Randnotiz erscheinen.</p>
+<p>Es ist höchste Zeit, dieses überkommene System auf den Prüfstand zu stellen. Private Medien, Streaming-Dienste und das World Wide Web bieten längst Alternativen zur staatlich verordneten Informationsdiät. Eine Grundversorgung mit Nachrichten ließe sich für einen Bruchteil der horrenden Kosten realisieren.</p>
+<p>Der Rundfunkbeitrag ist ein <strong>Anachronismus aus Zeiten der Informationsknappheit</strong>. Heute drohen wir in der Informationsflut zu ertrinken. Was wir brauchen, ist kritisches Denken, nicht staatlich alimentierte Gängelung. Es ist an der Zeit, den öffentlich-rechtlichen Rundfunk von den Fesseln der Zwangsfinanzierung zu befreien und ihn dem rauen Wind des Wettbewerbs auszusetzen. Nur so kann er sich erneuern – oder untergehen.</p>
+</div>
         <div class="article-foot-container">
-            <div class="article-information-container">
+            <div class="article-information-container information-bar-foot">
                 <div class="article-date-wrapper">
                     <time class="article-date">17.07.2024</time>
+                </div>
+                <div class="article-id">
+                    #0925629CBC
+                </div>
+                <div class="article-author">
+                    — NB
                 </div>
             </div>
         </div>
