--- a/blogv2/public/0f9429fea3/index.html
+++ b/blogv2/public/0f9429fea3/index.html
@@ -42,7 +42,7 @@
         <div class="article-head-container">
             <div id="moving-stripes">
             </div>
-            <div class="article-information-container">
+            <div class="article-information-container information-bar-head">
                 <div class="article-number">
                     Beitrag 3
                 </div>
@@ -53,11 +53,40 @@
                     492 Wörter
                 </div>
             </div>
+            <div class="article-image-wrapper">
+                <img class="articleImage" src="/images/0F9429FEA3.webp" loading="lazy" alt="">
+            </div>
+            <div class="article-banner-container article-banner-head">
+                <div class="article-title-wrapper">
+                    <h2 class="article-title">Code der Macht</h2>
+                </div>
+                <div class="article-subtitle-wrapper">
+                    <h3 class="article-subtitle">Open Source als Ausweg aus der digitalen Oligarchie</h3>
+                </div>
+            </div>
         </div>
+        <div class="article-content"><p>In den Tiefen des <em>Silicon Valley</em>, wo Bits und Bytes die neue Währung sind, braut sich eine Revolution zusammen. Künstliche Intelligenz, einst Science-Fiction, ist nun greifbare Realität. Doch wer kontrolliert diese mächtige Technologie? Während Tech-Giganten ihre KI-Modelle wie Kronjuwelen hüten, wächst der Ruf nach Offenheit und Transparenz.</p>
+<p>Stellen Sie sich vor: Eine Handvoll Unternehmen besitzt die Schlüssel zu einer Technologie, die Arbeit, Bildung und Kommunikation radikal verändern wird. Ein <strong>digitales Oligopol</strong>, das die Macht hat, Informationen zu filtern, Meinungen zu beeinflussen und ganze Wirtschaftszweige umzukrempeln. Klingt das nach einer gesunden Zukunft?</p>
+<p>Die Befürworter geschlossener Systeme argumentieren mit <strong>Qualitätskontrolle und Sicherheit</strong>. &ldquo;Wir können nicht zulassen, dass potentiell gefährliche KI-Systeme unkontrolliert in die Welt gelangen&rdquo;, tönt es aus den Chefetagen. Ein nobles Argument - oder doch nur ein Feigenblatt für Profitgier?</p>
+<p>Auf der anderen Seite stehen die Open-Source-Verfechter. Ihre Vision: <strong>KI als Allgemeingut</strong>, frei zugänglich für Forscher, Entwickler und die breite Öffentlichkeit. &ldquo;Niemand sollte ein Monopol über extrem billige Intelligenz haben&rdquo;, argumentieren sie. Ein demokratischer Ansatz, der Innovation fördern und Machtkonzentration verhindern soll.</p>
+<p>Doch die Realität ist komplexer. Wenn KI-Systeme Millionen von Arbeitsplätzen ersetzen, droht eine beispiellose wirtschaftliche Umwälzung. Die Mittelschicht schrumpft, die Kaufkraft sinkt. Ein selbstregulierender Mechanismus? Vielleicht. Aber reicht das aus, um soziale Verwerfungen zu verhindern?
+Experten warnen: Ohne strikte Regulierung könnte der <strong>KI-getriebene Kapitalismus</strong> in eine Dystopie münden. Wenige Unternehmen häufen unvorstellbaren Reichtum an, während die Masse verarmt. Ein Szenario, das an düstere Science-Fiction-Romane erinnert.</p>
+<p>Doch es gibt Hoffnung. Das Open-Source-Modell zeigt, dass Offenheit und Profit sich nicht ausschließen. Nehmen wir <em>Red Hat</em>, den Linux-Giganten: Obwohl das Betriebssystem frei verfügbar ist, erwirtschaftet das Unternehmen Milliarden durch Beratung und Enterprise-Lösungen. Ähnlich könnte es bei KI laufen: Freie Modelle als Basis, Unternehmen verdienen an Consulting, Ökosystem-Entwicklung und Governance.</p>
+<p>Außerdem haben nur wenige Unternehmen oder Personen die Ressourcen, solche Modelle auf eigenen Geräten zu betreiben oder kommerziell im großen Stil anzubieten. Auch wird das Unternehmen, das das Modell ursprünglich trainiert hat, stets einen Vorsprung bei Produktqualität und Implementierungseffizienz haben. Doch gerade hier zeigt sich die <strong>Stärke der Offenheit</strong>: Sie schafft ein Ökosystem, in dem eine Vielzahl von Akteuren auf der Basis dieser Modelle innovieren, sie für spezifische Anwendungen optimieren und neue Geschäftsmodelle entwickeln kann. Die ursprünglichen Entwickler behalten zwar einen Vorteil, aber das gesamte Innovationspotenzial vervielfacht sich – <strong>zum Nutzen aller</strong>.</p>
+<p><em>Mozilla</em> mit <em>Firefox</em> und <em>Automattic</em> mit <em>WordPress</em> sind weitere Beispiele für erfolgreiche Open-Source-Geschäftsmodelle. Sie beweisen: Innovation und wirtschaftlicher Erfolg sind auch ohne proprietäre Kontrolle möglich.</p>
+<p>Die der KI-Revolution liegt in ihrem Potential, unser Leben zu verbessern. Doch um dieses Potential zu entfalten, müssen wir die richtigen Weichen stellen. Sonst droht uns ein <strong>digitales Mittelalter</strong>, in dem wenige Konzerne über das Schicksal der Menschheit entscheiden.</p>
+<p>Die Uhr tickt. Die Entscheidungen, die wir heute treffen, werden die Zukunft auf Jahrzehnte prägen. Es ist an der Zeit, dass wir als Gesellschaft eine offene Debatte führen: Wem gehört die Intelligenz der Zukunft? Und wie können wir sicherstellen, dass sie allen dient - nicht nur einer privilegierten Elite?</p>
+</div>
         <div class="article-foot-container">
-            <div class="article-information-container">
+            <div class="article-information-container information-bar-foot">
                 <div class="article-date-wrapper">
                     <time class="article-date">31.07.2024</time>
+                </div>
+                <div class="article-id">
+                    #0F9429FEA3
+                </div>
+                <div class="article-author">
+                    — NB
                 </div>
             </div>
         </div>
