--- a/blogv2/public/ec28129f49/index.html
+++ b/blogv2/public/ec28129f49/index.html
@@ -42,7 +42,7 @@
         <div class="article-head-container">
             <div id="moving-stripes">
             </div>
-            <div class="article-information-container">
+            <div class="article-information-container information-bar-head">
                 <div class="article-number">
                     Beitrag 5
                 </div>
@@ -53,11 +53,39 @@
                     506 Wörter
                 </div>
             </div>
+            <div class="article-image-wrapper">
+                <img class="articleImage" src="/images/EC28129F49.webp" loading="lazy" alt="">
+            </div>
+            <div class="article-banner-container article-banner-head">
+                <div class="article-title-wrapper">
+                    <h2 class="article-title">Fesseln der Wissenschaft</h2>
+                </div>
+                <div class="article-subtitle-wrapper">
+                    <h3 class="article-subtitle">Der Kampf um offenen Zugang zur Wissenschaft im digitalen Zeitalter</h3>
+                </div>
+            </div>
         </div>
+        <div class="article-content"><p>In der Welt der akademischen Veröffentlichungen verbirgt sich hinter einer Fassade aus <strong>Prestige und Tradition</strong> ein System, das längst überholt scheint. Die der wissenschaftlichen Erkenntnisse, die täglich in Laboren und Forschungseinrichtungen weltweit gewonnen werden, bleibt allzu oft hinter digitalen Mauern verborgen, bewacht von den Giganten der Verlagswelt wie <em>Elsevier</em> und <em>Springer</em>.</p>
+<p>Stellen wir uns vor: Ein vielversprechender Durchbruch in der Krebsforschung, finanziert durch Steuergelder, wird publiziert. Doch der Zugang zu diesem Wissen kostet schlappe 30 Euro pro Artikel. Nicht nur für Forscher in weniger privilegierten Institutionen oder Entwicklungsländern kann dies ein unüberwindbares Hindernis darstellen, sondern auch für interessierte Laien, Journalisten oder Patienten, die sich über den neuesten Stand der Forschung informieren möchten. Die bittere Ironie: Die Öffentlichkeit, die diese Forschung indirekt finanziert hat, bleibt außen vor.</p>
+<p>Das aktuelle System zwingt Wissenschaftler in ein Korsett aus <strong>&quot;<em>Publish or Perish</em>&quot;</strong>. Nur wer in renommierten Journals veröffentlicht, hat Aussicht auf Fördergelder und Karrierefortschritt. Doch diese Journals sind oft in den Händen weniger Großverlage, die astronomische Gewinnmargen von bis zu 40% erzielen – ein lukratives Geschäft auf dem Rücken der Wissenschaft.</p>
+<p>Ein besonders perfider Aspekt dieses Systems: Universitäten, die in Deutschland größtenteils mit Steuergeldern finanziert werden, sehen sich gezwungen, exorbitante Summen an diese Verlagsgiganten zu zahlen. Nur so können sie ihren Angestellten und Studierenden Zugang zu den notwendigen Ressourcen ermöglichen. Es entsteht ein Teufelskreis: Wissenschaftler veröffentlichen ihre Arbeiten - oft kostenlos - über diese Unternehmen, die dann wiederum die Universitäten zwingen, hohe Summen für den Zugang zu eben diesen Publikationen zu zahlen. Die Verlage fungieren dabei als <strong>Gatekeeper</strong>, ohne selbst wesentlich zum wissenschaftlichen Prozess beizutragen.</p>
+<p>Befürworter des Status quo argumentieren, das System gewährleiste <strong>Qualität durch rigoroses Peer-Review</strong>. Zudem seien die Kosten für professionelles Editieren, Formatieren und langfristige Archivierung nicht zu unterschätzen. Valide Punkte, gewiss, doch rechtfertigen sie wirklich die aktuellen Preisstrukturen?</p>
+<p>Ein oft übersehener Aspekt ist der &ldquo;<em>Impact Factor</em>&rdquo; – eine metrische Zahl, die die Bedeutung eines Journals quantifizieren soll. Dieses System fördert oft sensationsheischende Forschung und vernachlässigt wichtige, aber weniger spektakuläre Studien. Es entsteht ein weiterer Kreislauf, in dem Forscher gezwungen sind, sich diesem Spiel zu beugen, um ihre Karrieren voranzutreiben.</p>
+<p>Doch es gibt Hoffnung am Horizont. <strong>Open-Access-Initiativen</strong> wie das &ldquo;<em>Plan S</em>&rdquo; in Europa zwingen Verlage zum Umdenken. Preprint-Server wie <em>arXiv</em> ermöglichen schnelle, kostenlose Verbreitung von Forschungsergebnissen. Plattformen wie <em>Sci-Hub</em>, obwohl rechtlich umstritten, zeigen den enormen <strong>Bedarf an freiem Zugang zu wissenschaftlichen Publikationen</strong>.</p>
+<p>Die Blockchain-Technologie könnte zudem neue Wege für transparente Peer-Review-Prozesse und dezentrale Publikationssysteme eröffnen. <em>Imaginez</em>, ein System, in dem Forscher direkt belohnt werden, ohne dass Zwischenhändler den Großteil der Gewinne abschöpfen.</p>
+<p>Es ist an der Zeit, das wissenschaftliche Publikationssystem grundlegend zu überdenken. Wir brauchen ein offenes, faires System, das den <strong>freien Fluss von Wissen</strong> fördert und gleichzeitig die Qualität und Integrität der Forschung wahrt. Nur so können wir sicherstellen, dass die brillanten Entdeckungen unserer Zeit nicht im Verborgenen bleiben, sondern ihr volles Potenzial entfalten können - zugänglich für Wissenschaftler und interessierte Bürger gleichermaßen.</p>
+<p>Die <strong>Wissenschaft gehört der Menschheit</strong>. Es liegt an uns, sie aus ihrem goldenen Käfig zu befreien und einen demokratischen Zugang zu Wissen zu ermöglichen.</p>
+</div>
         <div class="article-foot-container">
-            <div class="article-information-container">
+            <div class="article-information-container information-bar-foot">
                 <div class="article-date-wrapper">
                     <time class="article-date">23.09.2024</time>
+                </div>
+                <div class="article-id">
+                    #EC28129F49
+                </div>
+                <div class="article-author">
+                    — NB
                 </div>
             </div>
         </div>
