--- a/blogv2/public/229bfb03af/index.html
+++ b/blogv2/public/229bfb03af/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Eine Analyse der politischen Extreme">
     <title>Die gespaltene Nation</title>
+    <link rel="icon" href="/favicon.svg" sizes="any" type="image/svg+xml">
     <link rel="stylesheet" href="/styles/style.css">
 </head>
 <body>
@@ -19,7 +20,7 @@
                 <a href="/categories" class="nav-link">[themen]</a>
             </div>
         </div>
-        <div class="navbar-date-wrapper">
+        <div class="navbar-date-container">
             Wednesday November 20, 2024
         </div>
     </div>
