--- a/blogv2/public/index.html
+++ b/blogv2/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="die meinung, ein Blog über alles.">
     <title>pracht</title>
+    <link rel="icon" href="/favicon.svg" sizes="any" type="image/svg+xml">
     <link rel="stylesheet" href="/styles/style.css">
 </head>
 <body>
@@ -20,7 +21,7 @@
                 <a href="/categories" class="nav-link">[themen]</a>
             </div>
         </div>
-        <div class="navbar-date-wrapper">
+        <div class="navbar-date-container">
             Wednesday November 20, 2024
         </div>
     </div>
