--- a/blogv2/public/fe23f8adc4/index.html
+++ b/blogv2/public/fe23f8adc4/index.html
@@ -2,9 +2,10 @@
 <html lang="de">
 <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=825px, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="description" content="Die verschwiegene Wahrheit über Deutschlands Energiezukunft">
     <title>Kraftwerk der Lügen</title>
+    <link rel="icon" href="/favicon.svg" sizes="any" type="image/svg+xml">
     <link rel="stylesheet" href="/styles/style.css">
 </head>
 <body>
@@ -19,7 +20,7 @@
                 <a href="/categories" class="nav-link">[themen]</a>
             </div>
         </div>
-        <div class="navbar-date-wrapper">
+        <div class="navbar-date-container">
             Wednesday November 20, 2024
         </div>
     </div>
