--- a/blogv2/public/0f9429fea3/index.html
+++ b/blogv2/public/0f9429fea3/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=825px, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="description" content="Open Source als Ausweg aus der digitalen Oligarchie">
     <title>Code der Macht</title>
     <link rel="icon" href="/favicon.svg" sizes="any" type="image/svg+xml">
