--- a/blogv2/public/229bfb03af/index.html
+++ b/blogv2/public/229bfb03af/index.html
@@ -3,8 +3,9 @@
 
 <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=content-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="description" content="Eine Analyse der politischen Extreme">
+    <meta http-equiv="Content-Language" content="de">
     <title>Die gespaltene Nation</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
