--- a/blogv2/public/ec28129f49/index.html
+++ b/blogv2/public/ec28129f49/index.html
@@ -3,8 +3,9 @@
 
 <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=content-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="description" content="Der Kampf um offenen Zugang zur Wissenschaft im digitalen Zeitalter">
+    <meta http-equiv="Content-Language" content="de">
     <title>Fesseln der Wissenschaft</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,7 +25,7 @@
                 <a href="/" class="nav-link">[home]</a>
             </div>
             <div class="nav-link-wrapper">
-                <a href="/categories" class="nav-link">[themen]</a>
+                <a href="/themen" class="nav-link">[themen]</a>
             </div>
         </div>
         <div class="navbar-date-container">
