--- a/blogv2/public/index.html
+++ b/blogv2/public/index.html
@@ -33,7 +33,7 @@
             Wednesday November 20, 2024
         </div>
     </div>
-    <a href="/" class="navbar-logo-link">
+    <a href="/" class="navbar-logo-link" aria-label="home">
         <div class="navbar-logo-wrapper">
             <svg width="125" height="26" viewBox="0 0 125 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M117.031 24.8467H112.143V5.24463H104.777V0.339844H124.379V5.24463H117.031V24.8467Z"
