--- a/blogv2/public/ec28129f49/index.html
+++ b/blogv2/public/ec28129f49/index.html
@@ -6,12 +6,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="description" content="Der Kampf um offenen Zugang zur Wissenschaft im digitalen Zeitalter">
     <meta http-equiv="Content-Language" content="de">
+    <meta name="color-scheme" content="light">
     <title>Fesseln der Wissenschaft</title>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Fira+Mono:wght@500&family=Fira+Sans:wght@400;500;700&display=swap"
-        rel="stylesheet">
+
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Fira+Mono:wght@500&family=Fira+Sans:wght@400;500;700&display=swap" as="style">
+
+    <style>
+        @font-face {
+            font-family: 'Fira Mono';
+            src: url('https://fonts.gstatic.com/s/firamono/v14/2sDL6YrGZtNPOgsr76xJ7IUbLPiV0J8tJZlBaP9-Sxw.woff2') format('woff2');
+            font-weight: 500;
+            font-display: swap;
+        }
+        @font-face {
+            font-family: 'Fira Sans';
+            src: url('https://fonts.gstatic.com/s/firasans/v18/7AjiYmuwIIm6kkXlMJhbBbTk93Mm5e0UEMwSf59qxlk.woff2') format('woff2');
+            font-weight: 500;
+            font-display: swap;
+        }
+        @font-face {
+            font-family: 'Fira Sans';
+            src: url('https://fonts.gstatic.com/s/firasans/v18/7AjiYmuwIIm6kkXlMJhbBbTk93Mm5e0UEMwSf59qxlk.woff2') format('woff2');
+            font-weight: 700;
+            font-display: swap;
+        }
+    </style>
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fira+Mono:wght@500&family=Fira+Sans:wght@400;500;700&display=swap">
+
     <link rel="icon" href="/favicon.svg" sizes="any" type="image/svg+xml">
     <link rel="stylesheet" href="/styles/style.css">
 </head>
