--- a/blogv2/public/themen/index.html
+++ b/blogv2/public/themen/index.html
@@ -7,13 +7,39 @@
     <meta name="description" content="die meinung, ein Blog über alles.">
     <meta http-equiv="Content-Language" content="de">
     <title>Themen</title>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Fira+Mono:wght@500&family=Fira+Sans:wght@400;500;700&display=swap"
-        rel="stylesheet">
+
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Fira+Mono:wght@500&family=Fira+Sans:wght@400;500;700&display=swap" as="style">
+
+    <style>
+        @font-face {
+            font-family: 'Fira Mono';
+            src: url('https://fonts.gstatic.com/s/firamono/v14/2sDL6YrGZtNPOgsr76xJ7IUbLPiV0J8tJZlBaP9-Sxw.woff2') format('woff2');
+            font-weight: 500;
+            font-display: swap;
+        }
+        @font-face {
+            font-family: 'Fira Sans';
+            src: url('https://fonts.gstatic.com/s/firasans/v18/7AjiYmuwIIm6kkXlMJhbBbTk93Mm5e0UEMwSf59qxlk.woff2') format('woff2');
+            font-weight: 500;
+            font-display: swap;
+        }
+        @font-face {
+            font-family: 'Fira Sans';
+            src: url('https://fonts.gstatic.com/s/firasans/v18/7AjiYmuwIIm6kkXlMJhbBbTk93Mm5e0UEMwSf59qxlk.woff2') format('woff2');
+            font-weight: 700;
+            font-display: swap;
+        }
+    </style>
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fira+Mono:wght@500&family=Fira+Sans:wght@500;700&display=swap">
+
     <link rel="icon" href="/favicon.svg" sizes="any" type="image/svg+xml">
-    <link rel="stylesheet" href="/styles/style.css">
+    <noscript>
+        <link rel="stylesheet" href="/styles/style.css">
+    </noscript>
 </head>
 
 <body>
