--- a/blogv2/public/themen/wissenschaft/index.html
+++ b/blogv2/public/themen/wissenschaft/index.html
@@ -6,40 +6,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="description" content="die meinung, ein Blog über alles.">
     <meta http-equiv="Content-Language" content="de">
+    <meta name="color-scheme" content="light">
     <title>Wissenschaft</title>
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-
-    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Fira+Mono:wght@500&family=Fira+Sans:wght@400;500;700&display=swap" as="style">
 
     <style>
         @font-face {
+            font-display: swap;
             font-family: 'Fira Mono';
-            src: url('https://fonts.gstatic.com/s/firamono/v14/2sDL6YrGZtNPOgsr76xJ7IUbLPiV0J8tJZlBaP9-Sxw.woff2') format('woff2');
+            font-style: normal;
             font-weight: 500;
-            font-display: swap;
+            src: url('../fonts/fira-mono-v14-latin-500.woff2') format('woff2');
         }
+
         @font-face {
+            font-display: swap;
             font-family: 'Fira Sans';
-            src: url('https://fonts.gstatic.com/s/firasans/v18/7AjiYmuwIIm6kkXlMJhbBbTk93Mm5e0UEMwSf59qxlk.woff2') format('woff2');
+            font-style: normal;
+            font-weight: 400;
+            src: url('../fonts/fira-sans-v17-latin-regular.woff2') format('woff2');
+        }
+
+        @font-face {
+            font-display: swap;
+            font-family: 'Fira Sans';
+            font-style: normal;
             font-weight: 500;
-            font-display: swap;
+            src: url('../fonts/fira-sans-v17-latin-500.woff2') format('woff2');
         }
+
         @font-face {
+            font-display: swap;
             font-family: 'Fira Sans';
-            src: url('https://fonts.gstatic.com/s/firasans/v18/7AjiYmuwIIm6kkXlMJhbBbTk93Mm5e0UEMwSf59qxlk.woff2') format('woff2');
+            font-style: normal;
             font-weight: 700;
-            font-display: swap;
+            src: url('../fonts/fira-sans-v17-latin-700.woff2') format('woff2');
         }
     </style>
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fira+Mono:wght@500&family=Fira+Sans:wght@500;700&display=swap">
-
     <link rel="icon" href="/favicon.svg" sizes="any" type="image/svg+xml">
-    <noscript>
-        <link rel="stylesheet" href="/styles/style.css">
-    </noscript>
+    <link rel="stylesheet" href="/styles/style.css">
 </head>
 
 <body>
